--- a/Thimens.DataMapper/Thimens.DataMapper.csproj
+++ b/Thimens.DataMapper/Thimens.DataMapper.csproj
@@ -6,15 +6,18 @@
     <AssemblyName>Thimens.DataMapper</AssemblyName>
     <RootNamespace>Thimens.DataMapper</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Description>A easy-to-use and powerfull Micro-ORM for .NET</Description>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0</FileVersion>
-    <Version>2.0.0</Version>
+    <Description>A easy-to-use and powerful Micro-ORM for .NET</Description>
+    <AssemblyVersion>2.1.0.0</AssemblyVersion>
+    <FileVersion>2.1.0.0</FileVersion>
+    <Version>2.1.0</Version>
     <PackageLicenseUrl>https://opensource.org/licenses/MS-PL</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/thimens/DataMapper/</PackageProjectUrl>
     <RepositoryUrl>https://opensource.org/licenses/MS-PL</RepositoryUrl>
     <PackageTags>micro-orm, orm, datamapper, data mapper, object mapper</PackageTags>
     <RepositoryType>GIT</RepositoryType>
+    <Authors>Thiago Mendes</Authors>
+    <Company />
+    <Product>DataMapper</Product>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
