--- a/Thimens.DataMapper/Thimens.DataMapper.csproj
+++ b/Thimens.DataMapper/Thimens.DataMapper.csproj
@@ -10,7 +10,7 @@
     <AssemblyVersion>3.2.0.0</AssemblyVersion>
     <FileVersion>3.2.0.0</FileVersion>
     <Version>3.2.0</Version>
-    <PackageLicenseUrl>https://opensource.org/licenses/MS-PL</PackageLicenseUrl>
+    <PackageLicenseExpression>MS-PL</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/thimens/DataMapper/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/thimens/DataMapper/</RepositoryUrl>
     <PackageTags>micro-orm, orm, datamapper, data mapper, object mapper, microorm, dapper</PackageTags>
